Adjusted the styling overlap issue in larger screens in safari. Switched some stuff up to components for reusability.

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ body {
   padding: 0;
   background: #13131c;
   text-align: center;
+  color: #FFF;
 
   @media screen and (max-width: 1020px) {
     font-size: 1.57vw;
@@ -83,14 +84,27 @@ a {
 
 .selected-content {
   display: flex;
+  display: -webkit-flex;
   justify-content: center;
   position: relative;
   color: #FFF;
   transition: 1s;
+  margin: 0 auto;
+  max-width: 1200px;
   max-height: calc(100vh - 50vh);
   overflow-y: auto;
 
   @media screen and (max-width: 640px) {
-    margin: 15em 0 0;
+    margin: 14em 0 0;
   }
+}
+
+.selected-content.safari {
+  @media screen and (min-width: 640px) {
+    margin-top: 15em;
+  }
+}
+
+.footer-space {
+  min-height: 4em;
 }
